Ensure AttributeTable sort indicator is always visible, prevent overflow on long header field names

--- a/plugins/style/AttributeTable.css
+++ b/plugins/style/AttributeTable.css
@@ -60,6 +60,7 @@ table.attribtable-table th {
     color: var(--button-text-color);
     box-shadow: inset -1px 0 0 var(--border-color),
                 inset 0 -1px 0 var(--border-color);
+    overflow: hidden;
 }
 
 table.attribtable-table th:first-child {
@@ -74,6 +75,12 @@ table.attribtable-table th > span {
     display: flex;
     align-items: center;
     position: relative;
+}
+
+table.attribtable-table th > span > span.icon {
+    position: absolute;
+    right: 1px;
+    background-color: var(--button-bg-color);
 }
 
 span.attribtable-table-headername {
